--- a/example/index.html
+++ b/example/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>BlueKit Example</title>
   </head>
-  <body>
+  <body style='background: #ddd'>
     <div id='root'>
     </div>
     <script src="/static/bundle.js"></script>
